welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:5: error: not found: value A
		case A => avance();
                     ^BDR2:6: error: not found: value B
		case B => avance(2);
                     ^BDR2:7: error: not found: value C
		case C => avance(3);
                     ^BDR2:8: error: not found: value D
		case D => avance(4);
                     ^BDR2:9: error: not found: value E
		case E => avance(5);
                     ^BDR2:10: error: not found: value F
		case F => avance(6);
                     ^BDR2:11: error: not found: value Z
		case Z => recule();
                     ^BDR2:12: error: not found: value Y
		case Y => recule(2);
                     ^BDR2:13: error: not found: value X
		case X => recule(3);
                     ^BDR2:14: error: not found: value W
		case W => recule(4);
                     ^BDR2:15: error: not found: value V
		case V => recule(5);
                     ^BDR2:16: error: not found: value U
		case U => recule(6);
                     ^BDR2:17: error: not found: value R
		case R => droite(); avance();
                     ^BDR2:18: error: not found: value L
		case L => gauche(); avance();
                     ^BDR2:19: error: not found: value I
		case I => retourne(); avance();
                     ^